# cifar10-mlops

./: .gitignore  README.md  app.py  pyproject.toml  register_best_run.py  requirements.txt
components/: common.py  data_loader_step.py  evaluate_step.py  model.py  pipeline.py  tracking.py  train_step.py
pipeline/: run.py
tests/: test_app.py
