[project]
name = "cifar_10_venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dvc>=3.64.2",
    "mlflow[auth]>=3.7.0",
    "torch>=2.5.1",
    "torchvision>=0.20.0",
    "zenml[server]>=0.92.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
